--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="screen">
+        <div class="display">
+            <div class="live">0</div>
+        </div>
+        <div class="keys">
+            <div class="clear button">AC</div>
+            <div class="sign button">+/-</div>
+            <div class="percent button">%</div>
+            <div class="division orange button">÷</div>
+            <div class="seven number button">7</div>
+            <div class="eight number button">8</div>
+            <div class="nine number button">9</div>
+            <div class="multiplication orange button">×</div>
+            <div class="four number button">4</div>
+            <div class="five number button">5</div>
+            <div class="six number button">6</div>
+            <div class="minus orange button">-</div>
+            <div class="one number button">1</div>
+            <div class="two number button">2</div>
+            <div class="three number button">3</div>
+            <div class="plus orange button">+</div>
+            <div class="zero number button">0</div>
+            <div class="decimal number button">.</div>
+            <div class="equal orange button">=</div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
