--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="three number button">3</div>
             <div class="plus orange arithmetic button">+</div>
             <div class="zero number button">0</div>
-            <div class="decimal number button">.</div>
+            <div class="decimal button">.</div>
             <div class="equal orange button">=</div>
         </div>
     </div>
